# oop_lab_four

./: CMakeLists.txt  README.md
include/: array.hpp  figure.hpp  point.hpp  polygon.hpp  rectangle.hpp  square.hpp  triangle.hpp
src/: main.cpp
tests/: test_figures.cpp
